issue: add nowrap

--- a/src/text.scss
+++ b/src/text.scss
@@ -30,6 +30,10 @@
   }
 }
 
+.nowrap{
+  white-space: nowrap;
+}
+
 .ell {
   white-space: nowrap;
   text-overflow: ellipsis;
